Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32450

cmdbridge does not clean up after itself

    XMLWordPrintable

Details

    Description

      Currently cmdbridge processes stay around on remote linux devices and require manual interaction to remove them.

      It would be good to have a mechanism to by which a cmdbridge process can clean up by itself (i.e. remove binary, kill process), e.g. after some period of time without communication with the host.

      The timeout should be rather large (1 day? 1 week?) to not interfere with regular uses which may involved lengthy periods of inactivity, ideally it could be configured when the cmdbridge is started, or even at runtime.

      Independently, there might be mechanisms to notice a dropped connection.

       

      Attachments

        Issue Links

          For Gerrit Dashboard: QTCREATORBUG-32450
          # Subject Branch Project Status CR V

          Activity

            People

              madwinter Marcus Tillmanns
              hjk hjk
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes