CmdBridge: Add watchdog timer

When started via SSH, the cmdbridge might not exit if the connection
ends. To workaround, we add a watchdog timer that exits the process
automatically if no "ping" is received for one minute.

Task-number: QTCREATORBUG-32450
Change-Id: If83cc16dfb9c032b5ceea4b566e9d8a95ab6dfe5
Reviewed-by: hjk <hjk@qt.io>